--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bulma": "^0.8.0",
+    "bulma-helpers": "^0.3.8",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-bulma-components": "^3.1.3",
+    "react-bulma-switch": "0.0.3",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.12.0",
+    "react-input-color": "^2.0.28",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
