--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.4.7",
     "bulma": "^0.8.0",
     "bulma-helpers": "^0.3.8",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.13.1",
