--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "bulma-helpers": "^0.3.8",
     "graphql": "^14.6.0",
@@ -18,6 +19,8 @@
     "react-bulma-components": "^3.1.3",
     "react-bulma-switch": "0.0.3",
     "react-ckeditor-component": "^1.1.0",
+    "react-cookie": "^4.0.3",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.12.0",
     "react-input-color": "^2.0.28",
     "react-router-dom": "^5.1.2",
