--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^16.12.0",
     "react-input-color": "^2.0.28",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
