--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "apollo-link": "^1.2.13",
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "bulma-helpers": "^0.3.8",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
