--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "node-sass": "^4.13.1",
+    "public-ip": "^4.0.0",
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
     "react-bulma-switch": "0.0.3",
@@ -27,7 +28,8 @@
     "react-input-color": "^2.0.28",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
