--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma-helpers": "^0.3.8",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
+    "ip-to-int": "^0.3.1",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "node-sass": "^4.13.1",
