--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "bulma-helpers": "^0.3.8",
+    "country-list": "^2.2.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "ip-to-int": "^0.3.1",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
+    "jodit-react": "^1.0.42",
     "node-sass": "^4.13.1",
     "public-ip": "^4.0.0",
     "react": "^16.12.0",
@@ -30,6 +32,7 @@
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "usa-states": "0.0.5",
     "uuid": "^3.4.0"
   },
   "scripts": {
