--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bulma-components": "^3.1.3",
     "react-bulma-switch": "0.0.3",
     "react-ckeditor-component": "^1.1.0",
+    "react-content-loader": "^5.0.4",
     "react-cookie": "^4.0.3",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.12.0",
